# mnemo

./: .coverage  .env.example  .gitignore  LICENSE  OVERVIEW.md  README.md  pyproject.toml
src/mnemo/: __init__.py  admin_cli.py  audit.py  audit_cli.py  audit_deep.py  chunking.py  cli.py  config.py  env_file.py  factory.py  lifecycle.py  mcp_server.py  models_catalog.py  registry.py  runtime_config.py  templates_io.py
src/mnemo/audit_prompts/: drift_audit.prompt.md
src/mnemo/core/: __init__.py  models.py  protocols.py
src/mnemo/embedders/: fastembed_embedder.py
src/mnemo/ingestion/: bugs_loader.py  devops_loader.py  sections.py  specs_loader.py
src/mnemo/ingestion/agents/: base.py  runner_factory.py
src/mnemo/ingestion/agents/copilot/: bugs_agent.py  runner.py  specs_agent.py
src/mnemo/ingestion/agents/copilot/prompts/: bugs.prompt.md  specs.prompt.md
src/mnemo/ingestion/agents/gh_models/: runner.py
src/mnemo/pipelines/: default.py  llamaindex.py
src/mnemo/stores/: chroma_store.py  lance_store.py
src/mnemo/templates/: adr.template.md  epic.template.md  story.template.md
tests/: conftest.py  test_admin_cli.py  test_audit.py  test_audit_cli.py  test_audit_deep.py  test_bugs_loader.py  test_chroma_store.py  test_chunking.py  test_cli.py  test_config.py  test_copilot_agents.py  test_default_pipeline.py  test_env_file.py  test_factory.py  test_fastembed_embedder.py  test_gh_models_runner.py  test_lifecycle.py  test_mcp_config_tools.py  test_models.py  test_models_catalog.py  test_registry.py  test_runner_factory.py  test_runtime_config.py  test_sections.py  test_specs_loader.py  test_templates.py
